fix: fixed z-index for header

--- a/css/main.css
+++ b/css/main.css
@@ -248,7 +248,7 @@ body {
   top: 0;
   left: 0;
   width: 100%;
-  z-index: 2;
+  z-index: 4;
   background-color: rgba(255, 255, 255, 0);
   -webkit-backdrop-filter: blur(5px);
           backdrop-filter: blur(5px);
