--- a/sass/sections/_header.scss
+++ b/sass/sections/_header.scss
@@ -6,7 +6,7 @@
     top: 0;
     left: 0;
     width: 100%;
-    z-index: 2;
+    z-index: 4;
     background-color: rgba(255, 255, 255, 0);
     backdrop-filter: blur(5px);
 
